Zoomed footer overflow fixed

--- a/css/main.css
+++ b/css/main.css
@@ -284,6 +284,7 @@ body {
   height: 300%;
   z-index: -1;
   background-color: #0077b6;
+  max-height: 2000px;
 }
 
 .about-decor .line1 {
